--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.orlinskas.cocktail">
 
     <application
+        android:name="com.orlinskas.cocktail.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,7 +26,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Main">
         </activity>
-
 
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
