--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -71,6 +71,10 @@ dependencies {
 
     implementation "com.jakewharton.timber:timber:$versions.timber"
 
+    implementation "androidx.fragment:fragment-ktx:$versions.fragment"
+    implementation "androidx.navigation:navigation-fragment-ktx:$versions.navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$versions.navigation"
+
     // Api
     implementation "com.squareup.retrofit2:retrofit:$versions.retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$versions.retrofit"
@@ -84,8 +88,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$versions.recyclerview"
     implementation "androidx.constraintlayout:constraintlayout:$versions.constraintlayout"
     implementation "androidx.paging:paging-runtime:$versions.paging"
-    implementation "androidx.fragment:fragment-ktx:$versions.fragment"
-    implementation "androidx.navigation:navigation-fragment-ktx:$versions.navigation"
 
     implementation "com.google.android.material:material:$versions.material"
 
