--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,10 +28,7 @@ buildscript {
                 navigation                  : "2.3.0",
                 fragment                    : "1.2.5",
                 materialdrawer              : "6.1.2",
-                materialdialogs             : "2.8.1",
-
-                glide                       : "4.11.0",
-                photoView                   : "2.0.0"
+                glide                       : "4.11.0"
         ]
     }
 }
@@ -49,7 +46,6 @@ dependencies {
 
     // Firebase
     implementation "com.google.firebase:firebase-crashlytics:$versions.crashlytics"
-
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
@@ -92,7 +88,6 @@ dependencies {
     implementation "com.google.android.material:material:$versions.material"
 
     implementation "com.github.bumptech.glide:glide:$versions.glide"
-    implementation "com.github.chrisbanes:PhotoView:$versions.photoView"
 
     // Test
     testImplementation 'junit:junit:4.12'
